packages/jsii/test/negatives/neg.static-member-mixing.1.ts
export class SuperDuper {
  public static funFunction() {
    // Empty
  }
}

export class Super extends SuperDuper {
  // Empty
}

export class Sub extends Super {
  public funFunction() {
    // Oops
  }
}
